# recipe_app_backend_25_04_08

./: README.md  pyproject.toml
comments/: admin.py  models.py  serializer.py
comments/migrations/: 0001_initial.py  0002_alter_comments_options.py  0003_alter_comments_recipe.py
common/: models.py
config/: settings.py  urls.py
likes/: admin.py  models.py
likes/migrations/: 0001_initial.py  0002_alter_like_options_alter_like_recipe.py
recipes/: admin.py  models.py  serializer.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_options.py  0003_recipe_like.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
