[tool.poetry]
name = "recipe-app-backend-25-04-08"
version = "0.1.0"
description = ""
authors = ["jen807 <80chill@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "recipe_app_backend_25_04_08" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = ">=5.2,<6.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-environ = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
